# CatchMeIfYouCan

./: README.md  requirements.txt  setup_kinova.bash
data_collection/: README.md  ball_trajectory.py  visualize_trajectory.py
data_collection/ball_traj_data/: ball_trajectory_20251030_192043.pkl  ball_trajectory_20251030_192628.pkl  ball_trajectory_20251030_193608.pkl  ball_trajectory_20251030_194010.pkl  ball_trajectory_20251030_202415.pkl  ball_trajectory_20251030_202540.pkl  ball_trajectory_20251030_202702.pkl  ball_trajectory_20251030_202915.pkl  (+6 more)
docs/: _config.yml  conclusion.md  design.md  implementation.md  index.md  materials.md  results.md  team.md
rosbag/: bag_to_csv.py  bag_to_csv_simple.py  compare_goal_pose_offline.py  compare_goal_pose_offline_v2.py  debug_kelly_bag.py  decoding.py  simulate_goal_pose.py  visualize_ball_fitting.py  visualize_kalman_filter.py  visualize_ros_bag.py  visualize_trajectory_robot_frame.py
src/control/: README.md  package.xml  setup.py
src/control/control/: kinova_controller_node.py  kinova_helper.py  kinova_mpc_controller.py  kinova_state_publisher.py  random_goal_publisher.py  transform_utils.py  utilities.py
src/prediction/: README.md  package.xml  setup.cfg  setup.py
src/prediction/debugging_scripts/: compare_prediction_data16.py  linear_regression_data16.py  visualize_data16_time_series.py  visualize_multiple_xz.py  visualize_prediction.py
src/prediction/prediction/: ball_fitting_predict_kalman_node.py  ball_fitting_predict_node.py  ball_prediction_node.py  ball_prediction_node_v2.py  ball_predictor.py
(+116 files in other folders)
