<?xml version="1.0"?>
<package format="3">
  <name>prediction</name>
  <version>0.0.2</version>
  <description>RealSense ball tracker.</description>
  <maintainer email="iconlab@example.com">iconlab</maintainer>
  <license>BSD-3-Clause</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
